# ControladorPresion

./: .dockerignore  .gitignore  Dockerfile  README.md  Resultados_Produccion.txt  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sim_output4.txt  test_real_safe.py  test_simulation.py  testeo_controlador.md
Dev_notebooks/: AjusteFT_PID.ipynb  Communication2.py  SIP1.csv  SIP2.csv  SIP3.csv  plc_control_log.csv
config/: pid_config.py  plc_config.py
data/: test_simulation_log.csv
src/: control_loop.py  pid_controller.py  plant_interface.py
utils/: data_logger.py
