[project]
name = "controladorpresion"
version = "1.0.0"
description = "Controlador PID discreto de presión para biorreactor – Comunicación Ethernet/IP con PLC Allen-Bradley"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "pylogix",
]

[project.optional-dependencies]
dev = [
    "sysidentpy",
    "ipykernel",
    "jupyter",
]

[project.scripts]
controlador = "main:main"
