[project]
name = "controladorpresion"
version = "1.0.0"
description = "Controlador PID discreto de presión para biorreactor – Comunicación Ethernet/IP con PLC Allen-Bradley"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "pylogix>=1.0",
]

[project.optional-dependencies]
dev = [
    "scipy",
    "sysidentpy",
    "ipykernel",
    "jupyter",
]

[project.scripts]
controlador = "main:main"
